Revert "Make the Web Terminal feature flag optional in the configuration"
This reverts commit f703f026051c4d0fcfbdc557723ad4bd8c34bad3.

--- a/pkg/crd/k8c.io/kubermatic.k8c.io_kubermaticsettings.yaml
+++ b/pkg/crd/k8c.io/kubermatic.k8c.io_kubermaticsettings.yaml
@@ -146,6 +146,7 @@ spec:
                 - enableDashboard
                 - enableExternalClusterImport
                 - enableOIDCKubeconfig
+                - enableWebTerminal
                 - machineDeploymentVMResourceQuota
                 - mlaAlertmanagerPrefix
                 - mlaGrafanaPrefix
