Defaulting the attribute to false for kubebuilder

--- a/pkg/crd/k8c.io/kubermatic.k8c.io_kubermaticsettings.yaml
+++ b/pkg/crd/k8c.io/kubermatic.k8c.io_kubermaticsettings.yaml
@@ -84,6 +84,7 @@ spec:
                 enableOIDCKubeconfig:
                   type: boolean
                 enableWebTerminal:
+                  default: false
                   description: EnableWebTerminal enables the Web Terminal feature for the user clusters.
                   type: boolean
                 machineDeploymentVMResourceQuota:
