--- a/pkg/crd/k8c.io/kubermatic.k8c.io_kubermaticsettings.yaml
+++ b/pkg/crd/k8c.io/kubermatic.k8c.io_kubermaticsettings.yaml
@@ -87,20 +87,30 @@ spec:
                   description: EnableWebTerminal enables the Web Terminal feature for the user clusters.
                   type: boolean
                 machineDeploymentVMResourceQuota:
+                  description: MachineDeploymentVMResourceQuota is used to filter out allowed machine flavors based on the specified resource limits like CPU, Memory, and GPU etc.
                   properties:
                     enableGPU:
+                      description: Include VMs with GPU
                       type: boolean
                     maxCPU:
-                      description: Maximal number of vCPU
+                      default: 0
+                      description: Maximum number of vCPU
+                      minimum: 0
                       type: integer
                     maxRAM:
+                      default: 0
                       description: Maximum RAM size in GB
+                      minimum: 0
                       type: integer
                     minCPU:
-                      description: Minimal number of vCPU
+                      default: 0
+                      description: Minimum number of vCPU
+                      minimum: 0
                       type: integer
                     minRAM:
-                      description: Minimal RAM size in GB
+                      default: 0
+                      description: Minimum RAM size in GB
+                      minimum: 0
                       type: integer
                   required:
                     - enableGPU
@@ -147,7 +157,6 @@ spec:
                 - enableExternalClusterImport
                 - enableOIDCKubeconfig
                 - enableWebTerminal
-                - machineDeploymentVMResourceQuota
                 - mlaAlertmanagerPrefix
                 - mlaGrafanaPrefix
                 - restrictProjectCreation
