for now, make the API work

--- a/.prow/api.yaml
+++ b/.prow/api.yaml
@@ -29,6 +29,7 @@ presubmits:
       preset-gce: "true"
       preset-kind-volume-mounts: "true"
       preset-vault: "true"
+      preset-repo-ssh: "true"
       preset-goproxy: "true"
     spec:
       containers:
