--- a/pkg/crd/k8c.io/kubermatic.k8c.io_presets.yaml
+++ b/pkg/crd/k8c.io/kubermatic.k8c.io_presets.yaml
@@ -182,6 +182,10 @@ spec:
                   properties:
                     accessKeyID:
                       type: string
+                    assumeRoleARN:
+                      type: string
+                    assumeRoleExternalID:
+                      type: string
                     datacenter:
                       description: If datacenter is set, this preset is only applicable to the configured datacenter.
                       type: string
