--- a/charts/monitoring/prometheus/rules/src/general/blackbox-exporter.yaml
+++ b/charts/monitoring/prometheus/rules/src/general/blackbox-exporter.yaml
@@ -15,14 +15,22 @@
 groups:
   - name: blackbox-exporter
     rules:
-      - alert: HttpProbeFailed
+      - alert: HttpCertExpiresSoon
         annotations:
-          message: Probing the blackbox-exporter target {{ $labels.instance }} failed.
-          runbook_url: https://docs.kubermatic.com/kubermatic/main/cheat-sheets/alerting-runbook/#alert-httpprobefailed
-        expr: probe_success != 1
-        for: 5m
+          message: The certificate for {{ $labels.instance }} expires in less than 3 days.
+          runbook_url: https://docs.kubermatic.com/kubermatic/main/cheat-sheets/alerting-runbook/#alert-httpcertexpiressoon
+        expr: probe_ssl_earliest_cert_expiry - time() < 3*24*3600
         labels:
           severity: warning
           resource: "{{ $labels.instance }}"
           service: blackbox-exporter
+      - alert: HttpCertExpiresVerySoon
+        annotations:
+          message: The certificate for {{ $labels.instance }} expires in less than 24 hours.
+          runbook_url: https://docs.kubermatic.com/kubermatic/main/cheat-sheets/alerting-runbook/#alert-httpcertexpiresverysoon
+        expr: probe_ssl_earliest_cert_expiry - time() < 24*3600
+        labels:
+          severity: critical
+          resource: "{{ $labels.instance }}"
+          service: blackbox-exporter      
 
