--- a/addons/csi/gcp/driver.yaml
+++ b/addons/csi/gcp/driver.yaml
@@ -22,6 +22,14 @@
 {{ if eq .Cluster.CloudProviderName "gcp" }}
 {{ if gt .Cluster.Version.Minor 24 }}
 apiVersion: v1
+kind: Secret
+metadata:
+  name: cloud-sa
+  namespace: kube-system
+data:
+  cloud-sa.json: {{ .Credentials.GCP.ServiceAccount | b64enc | quote }}
+---
+apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: csi-gce-pd-controller-sa
