Support for configuring dashboard notification settings
Signed-off-by: Waleed Malik <ahmedwaleedmalik@gmail.com>

--- a/pkg/crd/k8c.io/kubermatic.k8c.io_kubermaticsettings.yaml
+++ b/pkg/crd/k8c.io/kubermatic.k8c.io_kubermaticsettings.yaml
@@ -135,6 +135,16 @@ spec:
                     monitoringEnforced:
                       type: boolean
                   type: object
+                notifications:
+                  description: Notifications are the configuration for notifications on dashboard.
+                  properties:
+                    hideErrorEvents:
+                      description: HideErrorEvents will silence error events for the dashboard.
+                      type: boolean
+                    hideErrors:
+                      description: HideErrors will silence error notifications for the dashboard.
+                      type: boolean
+                  type: object
                 opaOptions:
                   properties:
                     enabled:
