define new API to create machines and provider specs

--- a/.prow/provider-gcp.yaml
+++ b/.prow/provider-gcp.yaml
@@ -37,7 +37,7 @@ presubmits:
             - name: RELEASES_TO_TEST
               value: "1.25"
             - name: PROVIDER
-              value: "gce"
+              value: "gcp"
             - name: DISTRIBUTIONS
               value: ubuntu
             - name: SERVICE_ACCOUNT_KEY
