--- a/pkg/crd/k8c.io/kubermatic.k8c.io_clustertemplates.yaml
+++ b/pkg/crd/k8c.io/kubermatic.k8c.io_clustertemplates.yaml
@@ -919,8 +919,11 @@ spec:
                         storagePolicy:
                           description: StoragePolicy to be used for storage provisioning
                           type: string
-                        tagCategoryName:
+                        tagCategoryID:
                           description: TagCategoryID represents the category id for the machine deployment tags.
+                          type: string
+                        tagCategoryName:
+                          description: TagCategoryName represents the name of vSphere tag category that will be used to create and attach tags on VMS.
                           type: string
                         username:
                           description: Username is the vSphere user name.
