--- a/pkg/crd/k8c.io/kubermatic.k8c.io_clusters.yaml
+++ b/pkg/crd/k8c.io/kubermatic.k8c.io_clusters.yaml
@@ -925,7 +925,10 @@ spec:
                           description: StoragePolicy to be used for storage provisioning
                           type: string
                         tagCategoryID:
-                          description: This is category for the machine deployment tags
+                          description: TagCategoryID represents the category id for the machine deployment tags.
+                          type: string
+                        tagCategoryName:
+                          description: TagCategoryName represents the name of vSphere tag category that will be used to create and attach tags on VMS.
                           type: string
                         username:
                           description: Username is the vSphere user name.
