--- a/addons/csi/openstack/snapshot-controller.yaml
+++ b/addons/csi/openstack/snapshot-controller.yaml
@@ -139,7 +139,7 @@ spec:
       serviceAccount: snapshot-controller
       containers:
         - name: snapshot-controller
-          image: k8s.gcr.io/sig-storage/snapshot-controller:v4.2.0
+          image: registry.k8s.io/sig-storage/snapshot-controller:v4.2.0
           args:
             - "--v=5"
             - "--leader-election=true"
