--- a/addons/csi/vsphere/vsphere-csi-driver.yaml
+++ b/addons/csi/vsphere/vsphere-csi-driver.yaml
@@ -289,7 +289,7 @@ spec:
           type: RuntimeDefault
       containers:
         - name: csi-attacher
-          image: {{ Registry "k8s.gcr.io" }}/sig-storage/csi-attacher:{{ $attacherVersion }}
+          image: {{ Registry "registry.k8s.io" }}/sig-storage/csi-attacher:{{ $attacherVersion }}
           args:
             - "--v=4"
             - "--timeout=300s"
@@ -304,7 +304,7 @@ spec:
             - mountPath: /csi
               name: socket-dir
         - name: csi-resizer
-          image: {{ Registry "k8s.gcr.io" }}/sig-storage/csi-resizer:{{ $resizerVersion }}
+          image: {{ Registry "registry.k8s.io" }}/sig-storage/csi-resizer:{{ $resizerVersion }}
           args:
             - "--v=4"
             - "--timeout=300s"
@@ -374,7 +374,7 @@ spec:
             periodSeconds: 5
             failureThreshold: 3
         - name: liveness-probe
-          image: {{ Registry "k8s.gcr.io" }}/sig-storage/livenessprobe:{{ $livenessProbeVersion }}
+          image: {{ Registry "registry.k8s.io" }}/sig-storage/livenessprobe:{{ $livenessProbeVersion }}
           args:
             - "--v=4"
             - "--csi-address=/csi/csi.sock"
@@ -417,7 +417,7 @@ spec:
               name: ca-bundle
               readOnly: true
         - name: csi-provisioner
-          image: {{ Registry "k8s.gcr.io" }}/sig-storage/csi-provisioner:{{ $provisionerVersion }}
+          image: {{ Registry "registry.k8s.io" }}/sig-storage/csi-provisioner:{{ $provisionerVersion }}
           args:
             - "--v=4"
             - "--timeout=300s"
@@ -436,7 +436,7 @@ spec:
             - mountPath: /csi
               name: socket-dir
         - name: csi-snapshotter
-          image: {{ Registry "k8s.gcr.io" }}/sig-storage/csi-snapshotter:{{ $snapshotterVersion }}
+          image: {{ Registry "registry.k8s.io" }}/sig-storage/csi-snapshotter:{{ $snapshotterVersion }}
           args:
             - "--v=4"
             - "--timeout=300s"
@@ -487,7 +487,7 @@ spec:
           type: RuntimeDefault
       containers:
         - name: node-driver-registrar
-          image: {{ Registry "k8s.gcr.io" }}/sig-storage/csi-node-driver-registrar:{{ $registrarVersion }}
+          image: {{ Registry "registry.k8s.io" }}/sig-storage/csi-node-driver-registrar:{{ $registrarVersion }}
           args:
             - "--v=5"
             - "--csi-address=$(ADDRESS)"
@@ -576,7 +576,7 @@ spec:
             periodSeconds: 5
             failureThreshold: 3
         - name: liveness-probe
-          image: {{ Registry "k8s.gcr.io" }}/sig-storage/livenessprobe:{{ $livenessProbeVersion }}
+          image: {{ Registry "registry.k8s.io" }}/sig-storage/livenessprobe:{{ $livenessProbeVersion }}
           args:
             - "--v=4"
             - "--csi-address=/csi/csi.sock"
