--- a/charts/monitoring/kube-state-metrics/values.yaml
+++ b/charts/monitoring/kube-state-metrics/values.yaml
@@ -14,7 +14,7 @@
 
 kubeStateMetrics:
   image:
-    repository: k8s.gcr.io/kube-state-metrics/kube-state-metrics
+    repository: registry.k8s.io/kube-state-metrics/kube-state-metrics
     tag: v2.2.3
   resources:
     requests:
