change backup seed vcenter ds

--- a/hack/ci/testdata/seed_backup.yaml
+++ b/hack/ci/testdata/seed_backup.yaml
@@ -77,7 +77,7 @@ spec:
         vsphere:
           cluster: Kubermatic
           datacenter: Hamburg
-          datastore: alpha1
+          datastore: ceph-vm
           endpoint: https://vcenter.dc.k8c.io
           root_path: /Hamburg/vm/Kubermatic-dev
           templates:
