Use AWS eu-west-1 for e2e tests
Signed-off-by: Marvin Beckers <marvin@kubermatic.com>

--- a/hack/ci/testdata/seed.yaml
+++ b/hack/ci/testdata/seed.yaml
@@ -65,6 +65,12 @@ spec:
       spec:
         aws:
           region: eu-central-1
+    aws-eu-west-1a:
+      location: EU (Ireland)
+      country: IE
+      spec:
+        aws:
+          region: eu-west-1
     hetzner-hel1:
       location: Helsinki 1 DC 6
       country: DE
