--- a/pkg/crd/k8c.io/kubermatic.k8c.io_clustertemplates.yaml
+++ b/pkg/crd/k8c.io/kubermatic.k8c.io_clustertemplates.yaml
@@ -920,10 +920,7 @@ spec:
                           description: StoragePolicy to be used for storage provisioning
                           type: string
                         tagCategoryID:
-                          description: TagCategoryID represents the category id for the machine deployment tags.
-                          type: string
-                        tagCategoryName:
-                          description: TagCategoryName represents the name of vSphere tag category that will be used to create and attach tags on VMS.
+                          description: This is category for the machine deployment tags
                           type: string
                         username:
                           description: Username is the vSphere user name.
