Fix PSP and PDB resources in addons `pod-security-policy`, `aws-node-termination-handler` and `aws-ebs-csi-driver` (#11373)
* Only create PSP resources on Kubernetes 1.24 or lower

Signed-off-by: Marvin Beckers <marvin@kubermatic.com>

* Ensure aws-ebs-csi-driver addon is shipped with policy/v1 API resource

Signed-off-by: Marvin Beckers <marvin@kubermatic.com>

* Fix templating in pod-security-policy addon

Signed-off-by: Marvin Beckers <marvin@kubermatic.com>

* Remove PodSecurityPolicy from aws-node-termination-handler addon

Signed-off-by: Marvin Beckers <marvin@kubermatic.com>

Signed-off-by: Marvin Beckers <marvin@kubermatic.com>

--- a/addons/pod-security-policy/psp-privileged.yaml
+++ b/addons/pod-security-policy/psp-privileged.yaml
@@ -12,6 +12,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
+{{- if and (eq .Cluster.Version.Major 1) (le .Cluster.Version.Minor 24) }}
 apiVersion: policy/v1beta1
 kind: PodSecurityPolicy
 metadata:
@@ -39,3 +40,4 @@ spec:
     rule: 'RunAsAny'
   fsGroup:
     rule: 'RunAsAny'
+{{- end }}
