--- a/pkg/crd/k8c.io/kubermatic.k8c.io_seeds.yaml
+++ b/pkg/crd/k8c.io/kubermatic.k8c.io_seeds.yaml
@@ -443,6 +443,9 @@ spec:
                               storagePolicy:
                                 description: The name of the storage policy to use for the storage class created in the user cluster.
                                 type: string
+                              tagCategoryID:
+                                description: TagCategoryID is the tag category id that will be used as default, if users don't specify it on a cluster level, and they don't wish KKP to create default generated tag category, upon cluster creation.
+                                type: string
                               templates:
                                 additionalProperties:
                                   type: string
