--- a/charts/oauth/values.yaml
+++ b/charts/oauth/values.yaml
@@ -14,8 +14,8 @@
 
 dex:
   image:
-    repository: "docker.io/dexidp/dex"
-    tag: "v2.30.0"
+    repository: "ghcr.io/dexidp/dex"
+    tag: "v2.35.3"
   replicas: 2
   # this options allows setting custom envvars in the dex container
   # this list is directly handed to the container spec
